<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/textColorLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/pointsTextView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="80dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        >

        <TextView
            android:id="@+id/leftTextView"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="10dp"
            android:text="@string/game_text_green"
            android:textColor="@color/game_red"
            android:textSize="30sp"
            />

        <TextView
            android:id="@+id/rightTextView"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/game_text_red"
            android:textColor="@color/game_green"
            android:textSize="30sp"
        />
    </LinearLayout>

    <Button
        android:id="@+id/yesButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/yes_button_text"
        android:layout_marginTop="80dp"
        app:layout_constraintTop_toBottomOf="@id/textColorLayout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/noButton"
        android:visibility="invisible"
        />

    <Button
        android:id="@+id/noButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_button_text"
        android:layout_marginTop="80dp"
        app:layout_constraintTop_toBottomOf="@id/textColorLayout"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/yesButton"
        android:visibility="invisible"
        />

    <Button
        android:id="@+id/startButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_button_text"
        android:layout_marginTop="120dp"
        app:layout_constraintTop_toBottomOf="@id/yesButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <TextView
        android:id="@+id/rulesTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rules_text"
        android:textAlignment="center"
        android:layout_marginTop="80dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:textSize="15sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <TextView
        android:id="@+id/timerTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="60"
        android:textAlignment="center"
        android:layout_marginTop="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/rulesTextView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <TextView
        android:id="@+id/pointsTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/points_text"
        android:textAlignment="center"
        android:layout_marginTop="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/timerTextView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <TextView
        android:id="@+id/recordTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/record_text"
        android:textAlignment="center"
        android:layout_marginTop="4dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@id/pointsTextView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>